force-app/main/default/objects/Payment_Confirmation__c/Payment_Confirmation__c.object-meta.xml
<CustomObject>
    <label>Payment Confirmation</label>
    <nameField>
        <label>Ref. No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Confirmations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>