force-app/main/default/objects/Payment_Confirmation__c/fields/Amount_for_selected_Assets__c.field-meta.xml
<CustomField>
    <fullName>Amount_for_selected_Assets__c</fullName>
    <label>Amount for selected Assets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>