force-app/main/default/objects/Payment_Confirmation__c/fields/Bill_Request_ID__c.field-meta.xml
<CustomField>
    <fullName>Bill_Request_ID__c</fullName>
    <label>Bill Request ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>