force-app/main/default/objects/Payment_Confirmation__c/fields/BillNo__c.field-meta.xml
<CustomField>
    <fullName>BillNo__c</fullName>
    <label>Bill No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>