force-app/main/default/objects/Payment_Confirmation__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <formula>&apos;To upload the payment confirmation, you need to edit this record once it is saved.&apos;</formula>
    <label>Message</label>
    <type>Text</type>
</CustomField>