force-app/main/default/objects/Payment_Confirmation__c/fields/Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Paid_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Paid On</label>
    <type>Date</type>
</CustomField>