force-app/main/default/objects/Payment_Confirmation__c/fields/Payment_API_Message__c.field-meta.xml
<CustomField>
    <fullName>Payment_API_Message__c</fullName>
    <label>Payment API Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>