force-app/main/default/objects/Payment_Confirmation__c/fields/Payment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Payment_Notes__c</fullName>
    <label>Payment Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>