force-app/main/default/objects/Payment_Confirmation__c/fields/PaymentConfirmationId__c.field-meta.xml
<CustomField>
    <fullName>PaymentConfirmationId__c</fullName>
    <label>Payment Confirmation Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>