force-app/main/default/objects/Payment_Confirmation__c/fields/PaymentConfirmationUploaded__c.field-meta.xml
<CustomField>
    <fullName>PaymentConfirmationUploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Confirmation Uploaded</label>
    <type>Checkbox</type>
</CustomField>