force-app/main/default/objects/Payment_Confirmation__c/fields/Wire_Bank_Fee__c.field-meta.xml
<CustomField>
    <fullName>Wire_Bank_Fee__c</fullName>
    <label>Wire/Bank Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>