force-app/main/default/objects/Payment_Confirmation__c/fields/WiredConfirmationId__c.field-meta.xml
<CustomField>
    <fullName>WiredConfirmationId__c</fullName>
    <label>Wired Confirmation Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>