force-app/main/default/objects/Payment_Confirmation__c/fields/WiredConfirmationUploaded__c.field-meta.xml
<CustomField>
    <fullName>WiredConfirmationUploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wired Confirmation Uploaded</label>
    <type>Checkbox</type>
</CustomField>